add plaintext registration

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
         <title>Finstagram</title>
     </head>
     <body>
-        <h1>Upload an Image!</h1>
-        <div id="upload">
-            <form action="/uploadImage" method="post" enctype="multipart/form-data">
-                <input type="file" name="imageToUpload" accept="image/*">
-                <br/>
-                <input type="submit" value="Upload">
-            </form>
+        <h1>Welcome to Finstagram</h1>
+        <div>
+            <ul>
+                <li><a href="/images">View Images</a></li>
+                <li><a href="/upload">Upload an Image</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            </ul>
         </div>
     </body>
 </html>
