add error handling

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,5 +17,8 @@
                 <input type="submit" value="Register">
             </form>
         </div>
+        {% if error %}
+            {{ error }}
+        {% endif %}
     </body>
 </html>
