--- a/templates/login.html
+++ b/templates/login.html
@@ -13,5 +13,8 @@
                 <input type="submit" value="Login">
             </form>
         </div>
+        {% if error %}
+            {{ error }}
+        {% endif %}
     </body>
 </html>
