--- a/templates/images.html
+++ b/templates/images.html
@@ -10,5 +10,6 @@
             <img src="/image/{{image.filePath}}" width="300"/>
             {% endfor %}
         </div>
+        <a href="/">Go back</a>
     </body>
 </html>
