--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,5 +11,10 @@
                 <input type="submit" value="Upload">
             </form>
         </div>
+        {% if message %}
+            {{ message }}
+        {% endif %}
+        <br/>
+        <a href="/">Go back</a>
     </body>
 </html>
