--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,6 +9,8 @@
                 <input type="file" name="imageToUpload" accept="image/*">
                 <br/>
                 <input type="submit" value="Upload">
+                <input type="checkbox" name="allFollowers" value="allFollowers">Post to All Followers<br>
+
             </form>
         </div>
         {% if message %}
