--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,9 @@
             <ul>
                 <li><a href="/images">View Images</a></li>
                 <li><a href="/upload">Upload an Image</a></li>
+                <li><a href="/follow">Follow</a></li>
                 <li><a href="/logout">Logout</a></li>
+
             </ul>
         </div>
     </body>
