updated upload photo to include group sharing

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,19 +3,26 @@
         <title>Image Upload</title>
     </head>
     <body>
+    <script>
+       function displayGroups(allFollowersSelector) {
+        var groups = document.getElementById("closeFriendsGroupSelector");
+        groups.style.display = allFollowersSelector.checked ? "none" : "block";
+    }
+
+    </script>
         <h1>Upload an Image!</h1>
         <div>
             <form action="/uploadImage" method="post" enctype="multipart/form-data">
                 <input type="file" name="imageToUpload" accept="image/*">
                 <br/>
-                <input type="submit" value="Upload">
-                <input type="checkbox" name="allFollowers" value="allFollowers">Post to All Followers<br>
+                <input type="checkbox" name="allFollowers" id = "allFollowersSelector" value="allFollowers" onclick="displayGroups(this)" checked>Post to All Followers<br>
                 <textarea name="caption" value="caption" placeholder="Enter Caption Here"></textarea>
-                <div id = 'closeFriendsGroupSelector' style="">
+                <div id = 'closeFriendsGroupSelector' style="display:none">
                     {% for group in user_groups %}
-                    <input type="checkbox" name={{group.groupName}} value={{group.groupName}}>group.groupName<br>
+                    <input type="checkbox" name="group" value="{{ group.groupName ~ ',' ~ group.groupOwner }}">{{ group.groupName }}
                     {% endfor %}
-                </div>
+                </div><br>
+                <input type="submit" value="Upload">
             </form>
         </div>
         {% if message %}
@@ -23,5 +30,6 @@
         {% endif %}
         <br/>
         <a href="/">Go back</a>
+
     </body>
 </html>
