--- a/templates/images.html
+++ b/templates/images.html
@@ -12,12 +12,16 @@
               INSERT INTO Photo VALUES (0000001, 123, '2018-12-12 09:30:20' , "images/TestImages/testfirst123.jpg", "my caption is yolo", TRUE)
               INSERT INTO Photo VALUES (0000002, 123, '2019-01-12 19:30:20', "/Users/rebeccafisch/Desktop/TestImages/testfirst123.jpg", "this is a cat", TRUE)
               ––>
-
             {% for image in images %} 
                 <h3>Image below by: {{ image.photoOwner  }}</h3>
                 <img src="/image/{{image.filePath}}" width="300"/>
                 <p> photoID: {{ image.photoID }} <br> caption: {{ image.caption }}
-                <br> timestamp: {{ image.timestamp }} </p>
+                <br> timestamp: {{ image.timestamp }} 
+                <br> people tagged: 
+                {% for post in posts %} 
+                   First name: {{post.fname}} Last name: {{post.lname}} <br>
+                {% endfor %}
+            </p>
             {% endfor %}
         </div>
         <a href="/">Go back</a>
