added ability to add comments

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Finstagram</title>
+        <title>db project</title>
     </head>
     <body>
         <h1>Hello, {{ username }}!</h1>
