option to go to tags screen now

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
                 <li><a href="/images">View Images</a></li>
                 <li><a href="/upload">Upload an Image</a></li>
                 <li><a href="/follow">Follow</a></li>
+                <li><a href="/view_tags">Tags</a></li>
                 <li><a href="/logout">Logout</a></li>
 
 
