--- a/templates/imageTags.html
+++ b/templates/imageTags.html
@@ -3,16 +3,13 @@
         <title>Finstagram</title>
     </head>
     <body>
-        <h1>Image Gallery</h1>
+        <h1>Image Tags</h1>
         <div>
-             
-            {% for image in images %} 
-                <h3>Image below by: {{ image.photoOwner }} </h3>
-                <img src="/image/{{image.filePath}}" width="300"/>
-                
-                <p> photoID: {{ image.photoID }} <br> caption: {{ image.caption }}
-                <br> timestamp: {{ image.timestamp }} 
-                <br> people tagged: <a href="/imageTags"> People Tagged</a>
+                 {% for post in posts %} 
+                  {% for subpost in post %} 
+                   First name: {{subpost.fname}} Last name: {{subpost.lname}} <br>
+                   {% endfor %}
+                 {% endfor %}
                 <form action = "/comment" method="POST">
                     <textarea id = 'comment' name="comment" rows="4" cols="50" placeholder="Comment..."></textarea>
                      <input type="hidden" name="photoid" value="{{ image.photoID }}">
