--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,8 @@
                 <li><a href="/follow">Follow</a></li>
                  <li><a href="/view_tags">Add Tag</a></li>
                 <li><a href="/view_tags">Tags</a></li>
+                <li><a href="/create">Create a Friend Group</a></li>
+
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
