friend groups update

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,7 @@
                 <li><a href="/follow">Follow</a></li>
                  <li><a href="/view_tags">Add Tag</a></li>
                 <li><a href="/view_tags">Tags</a></li>
-                <li><a href="/create">Create a Friend Group</a></li>
-
+                <li><a href="/friends">View Friend Groups</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
