--- a/templates/images.html
+++ b/templates/images.html
@@ -28,6 +28,9 @@
                           <br>
                           <input type="submit" value="Tag by username">
                       </form>
+                   {% if error %}
+                        {{ error }}
+                    {% endif %}
                 <form action = "/comment" method="POST">
                     <textarea id = 'comment' name="comment" rows="4" cols="50" placeholder="Comment..."></textarea>
                      <input type="hidden" name="photoid" value="{{ image.photoID }}">
