--- a/templates/friends.html
+++ b/templates/friends.html
@@ -19,7 +19,7 @@
             </form>
         </div>
     <br/>
-    <h1>Friend Groups</h1>
+    <h1>Manage Your Friend Groups</h1>
         {% if friendGroup %}
             <div>
                 <table>
@@ -31,6 +31,13 @@
                                   <input type="text" name="username" placeholder="Username" required>
                                   <input type="hidden" name="groupName" value="{{ group.groupName }}">
                                   <input type="submit" value="Add">
+                              </form>
+                          </td>
+                           <td>
+                              <form action="/removeFriend" method="POST">
+                                  <input type="text" name="username" placeholder="Username" required>
+                                  <input type="hidden" name="groupName" value="{{ group.groupName }}">
+                                  <input type="submit" value="Remove">
                               </form>
                           </td>
                        </tr>
