--- a/templates/images.html
+++ b/templates/images.html
@@ -23,6 +23,14 @@
                    {%endif%}
                    {% endfor %}
                  {% endfor %}
+                    <br> <u>comments:</u> <br>
+                {% for post in posts %}
+                  {% for subpost in post %}
+                  {% if image.photoID == subpost.commentPhotoID%}
+                   First name: {{subpost.commentUser}} Last name: {{subpost.commentText}} <br>
+                   {%endif%}
+                   {% endfor %}
+                 {% endfor %}
                   <form action="/add_tag" method="POST">
                   <h4>Tag someone in the photo:</h4>
                           <input type="text" name="username" placeholder="username" required/>
