--- a/templates/images.html
+++ b/templates/images.html
@@ -31,6 +31,14 @@
                    {%endif%}
                    {% endfor %}
                  {% endfor %}
+                    <br> <u>Likes:</u> <br>
+                {% for post in posts %}
+                  {% for subpost in post %}
+                  {% if image.photoID == subpost.likePhotoID%}
+                   Liked by: {{subpost.likeUser}} <br>
+                   {%endif%}
+                   {% endfor %}
+                 {% endfor %}
                   <form action="/add_tag" method="POST">
                   <h4>Tag someone in the photo:</h4>
                           <input type="text" name="username" placeholder="username" required/>
@@ -43,6 +51,12 @@
                      <input type="hidden" name="photoid" value="{{ image.photoID }}">
 
                     <input type="submit" value="Post Comment"><br>
+                </form>
+            <form action = "/like" method="POST">
+                     <input type="hidden" name="photoid" value="{{ image.photoID }}">
+                    {% if error %}
+                    Duplicate entries {% endif %}
+                    <input type="submit" value="Like this Photo"><br>
                 </form>
             </p>
             {% endfor %}
