Search tags and other small changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,9 @@
                 <li><a href="/upload">Upload an Image</a></li>
                 <li><a href="/follow">Follow</a></li>
                 <li><a href="/view_tags">Tags</a></li>
-                <li><a href="/search_user_images">Search Image by Poster</a></li>
                 <li><a href="/friends">View Friend Groups</a></li>
+                <li><a href="/search_user_images">Search Image by Poster</a></li>
+                 <li><a href="/search_tag_images">Search Image by Tags</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
