--- a/templates/images.html
+++ b/templates/images.html
@@ -23,7 +23,7 @@
                    {%endif%}
                    {% endfor %}
                  {% endfor %}
-                    <br> <u>comments:</u> <br>
+                    <br> <u>Comments:</u> <br>
                 {% for post in posts %}
                   {% for subpost in post %}
                   {% if image.photoID == subpost.commentPhotoID%}
